Harden CORS and extension messaging for Vercel and Render